Added extra slide for common mistakes with state

--- a/presentations/4/body.html
+++ b/presentations/4/body.html
@@ -158,6 +158,17 @@ render() {
     </section>
 
     <section>
+        <h4>💔 Mixing approach</h4>
+        <p>
+            Using <i>this.setState()</i> with functional components
+        </p>
+
+        <p>
+            Using <i>useState</i> with class-based components
+        </p>
+    </section>
+
+    <section>
         <h4>If you data is supposed to change - use state and don't mutate it directly</h4>
 
         <ul>
