--- a/presentations/5/index.html
+++ b/presentations/5/index.html
@@ -6,15 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React For Beginners - Managing state in React</title>
-    <meta name="description" content="Free learning course - React: Managing state in React"></meta>
-    <meta name="keywords" content="react free learning course beginners"></meta>
-    <meta name="twitter:card" content="summary"></meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short"></meta>
-    <meta name="twitter:creator" content="@drag137"></meta>
-    <meta name="twitter:title" content="React For Beginners - Managing state in React"></meta>
+    <meta name="description" content="Free learning course - React: Managing state in React">
+    </meta>
+    <meta name="keywords" content="react free learning course beginners">
+    </meta>
+    <meta name="twitter:card" content="summary">
+    </meta>
+    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
+    </meta>
+    <meta name="twitter:creator" content="@drag137">
+    </meta>
+    <meta name="twitter:title" content="React For Beginners - Managing state in React">
+    </meta>
     <meta property="og:title" content="React For Beginners - Managing state in React">
-    <meta name="author" content="drag13"></meta>
-    <meta name="robots" content="index follow"></meta>
+    <meta name="author" content="drag13">
+    </meta>
+    <meta name="robots" content="index follow">
+    </meta>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
@@ -60,7 +68,7 @@
                     <li>Timer should:</li>
                     <li>Be stopped by default</li>
                     <li>On start it should display time in format HH:MM:SS</li>
-                    <li>On start page title (<title>) should be changed to "Timer is running"</li>
+                    <li>On start page title (&lt;title&gt;) should be changed to "Timer is running"</li>
                     <li>On stop timer should be stopped and show the last value</li>
                     <li>Page title should be returned back to normal</li>
                     <li>Uninstall redux</li>
