--- a/presentations/6/index.html
+++ b/presentations/6/index.html
@@ -54,6 +54,7 @@
                 <h2>Useful links</h2>
                 <ul>
                     <li> <a target="_blank" rel="noreferrer noopener" href="https://css-tricks.com/css-modules-part-1-need/">Css Modules</a> </li>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://sass-lang.com/">Sass - css with superpowers</a> </li>
                     <li> <a target="_blank" rel="noreferrer noopener" href="https://styled-components.com/docs/basics#getting-started">Styled Components</a> </li>
                     <li> <a target="_blank" rel="noreferrer noopener" href="https://marketplace.visualstudio.com/items?itemName=styled-components.vscode-styled-components">Styled Components extension</a> </li>
                 </ul>
