Updated title with Ukraine colours

--- a/presentations/6/index.html
+++ b/presentations/6/index.html
@@ -6,17 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React For Beginners - Styling in React - from plain CSS to CSS in JS</title>
-    <meta name="description" content="Free learning course - React: Styling in React - from plain CSS to CSS in JS"></meta>
-    <meta name="keywords" content="react free learning course beginners"></meta>
-    <meta name="twitter:card" content="summary"></meta>
-    <meta name="twitter:title" content="React For Beginners - Styling in React - from plain CSS to CSS in JS"></meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short"></meta>
-    <meta name="twitter:creator" content="@drag137"></meta>
-    <meta name="twitter:image" content="../shared/imgs/title.png"></meta>
-    <meta property="og:image" content="../shared/imgs/title.png"> </meta>
+    <meta name="description" content="Free learning course - React: Styling in React - from plain CSS to CSS in JS">
+    </meta>
+    <meta name="keywords" content="react free learning course beginners">
+    </meta>
+    <meta name="twitter:card" content="summary">
+    </meta>
+    <meta name="twitter:title" content="React For Beginners - Styling in React - from plain CSS to CSS in JS">
+    </meta>
+    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
+    </meta>
+    <meta name="twitter:creator" content="@drag137">
+    </meta>
+    <meta name="twitter:image" content="../shared/imgs/title.png">
+    </meta>
+    <meta property="og:image" content="../shared/imgs/title.png">
+    </meta>
     <meta property="og:title" content="React For Beginners - Styling in React - from plain CSS to CSS in JS">
-    <meta name="author" content="drag13"></meta>
-    <meta name="robots" content="index follow"></meta>
+    <meta name="author" content="drag13">
+    </meta>
+    <meta name="robots" content="index follow">
+    </meta>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
@@ -28,9 +38,10 @@
         <div class="slides">
 
             <section>
-                <h1 style="color: #fff; line-height:1em; overflow-wrap: anywhere; background: linear-gradient(to bottom, #015bbb 50%, #fed500 50%);">
+                <h1 class="ukraine">
                     <div>Free React Course</div>
-                    <div>For Beginners</div></h1>
+                    <div>For Beginners</div>
+                </h1>
             </section>
 
             <section>
