--- a/presentations/2/body.html
+++ b/presentations/2/body.html
@@ -24,17 +24,17 @@
 
     <section>
         <pre><code data-line-numbers="">function App({ name }) {
-return &lt;h2 className="green"&gt; Hello - {name} &lt;/h2&gt;;
+    return &lt;h2 className="green"&gt; Hello - {name} &lt;/h2&gt;;
 }
         </code>
 
     </pre>
         <div class="fragment fade-up" data-fragment-index="1">⬇️</div>
         <pre class="fragment fade-up" data-fragment-index="1"><code data-line-numbers="">function l(e) {
-var n = e.name;
-return (0, r.jsxs)("h2", {
-className: "green",
-children: [" Hello - ", n, " "]});
+    var n = e.name;
+    return (0, r.jsxs)("h2", {
+    className: "green",
+    children: [" Hello - ", n, " "]});
 }
                             </code>
     </code></pre>
@@ -43,7 +43,7 @@ children: [" Hello - ", n, " "]});
     <section>
         <h4>Component as a function</h4>
         <pre><code data-line-numbers="">function AppHeader(props) {
-return &lt;h2&gt;  My first Application - {props.title} &lt;/h2&gt;;
+    return &lt;h2&gt;  My first Application - {props.title} &lt;/h2&gt;;
 }
             </code></pre>
     </section>
@@ -51,13 +51,13 @@ return &lt;h2&gt;  My first Application - {props.title} &lt;/h2&gt;;
     <section>
         <h4>Component as a class</h4>
         <pre><code  data-line-numbers="1-10|1|2|4-6">class AppHeader extends React.PureComponent {
-render() {
-return (
-    <h2>
-        My first Application - {this.props.title}
-    </h2>
-);
-}
+    render() {
+        return (
+            <h2>
+                My first Application - {this.props.title}
+            </h2>
+        );
+    }
 }
             </code></pre>
     </section>
@@ -119,9 +119,7 @@ return (
     <section>
         <h4>"Dumb" component example</h4>
         <pre>
-            <code>
-const AppHeader = (props) => <h1>{props.text}</h1>
-            </code>
+            <code data-line-numbers="">const AppHeader = (props) => <h1>{props.text}</h1></code>
         </pre>
     </section>
 
@@ -136,24 +134,23 @@ const AppHeader = (props) => <h1>{props.text}</h1>
     <section>
         <h4>Smart component example</h4>
         <pre>
-            <code class="pre-code-l" data-line-numbers="">import { FC, useState } from "react";
+            <pre><code data-line-numbers>import { FC, useState } from "react";
 
-const Expand: FC = ({ children }) => {
-const [isOpened, setExpanded] = useState(true);
-const txt = isOpened ? "Hide" : "Show";
-const style = { display: isOpened ? "block" : "none" };
-return (
-<div>
-&lt;button onClick={() => setExpanded(!isOpened)}>
-    {txt}
-&lt;/button>
-&lt;div style={style}> {children} &lt;/div>
-</div>
-);
+const Expand: FC = ({ children }) =&gt; {
+    const [isOpened, setExpanded] = useState(true);
+    const txt = isOpened ? "Hide" : "Show";
+    const style = { display: isOpened ? "block" : "none" };
+    return (
+    &lt;div&gt;
+        &lt;button onClick={() =&gt; setExpanded(!isOpened)}&gt;{txt}&lt;/button&gt;
+        &lt;div style={style}&gt; {children} &lt;/div&gt;
+    &lt;/div&gt;
+    );
 };
 
-export default () => &lt;Expand&gt;VERY BIG TEXT &lt;/Expand&gt;;
-</code>
+export default () =&gt; &lt;Expand&gt;VERY BIG TEXT &lt;/Expand&gt;;
+                </code></pre>
+        </code>
         </pre>
     </section>
 
@@ -193,7 +190,7 @@ export default () => &lt;Expand&gt;VERY BIG TEXT &lt;/Expand&gt;;
 type H1Props = { userName: string };
 
 const AppH1: FC &lt;H1Props&gt; = (props) => (
-<h1>Hello {props.userName}</h1>
+    <h1>Hello {props.userName}</h1>
 );
 
 export default () => &lt;AppH1 userName="Hello world" /&gt;
@@ -207,6 +204,21 @@ export default () => &lt;AppH1 userName="Hello world" /&gt;
             Instead of JavaScript, we are using <a href="https://www.typescriptlang.org/">TypeScript</a> -
             the superset of the JavaScript that makes code more maintainable
         </p>
+    </section>
+
+    <section>
+        <h4>Props allows to pass an component as well</h4>
+
+        <pre><code data-line-numbers>const StyledCard: FC = ({ children }) =&gt; (
+    &lt;div className="app-styledcard-root"&gt;{children}&lt;/div&gt;
+);
+
+const App = () =&gt; (
+    &lt;StyledCard&gt;
+        &lt;p&gt;This will be put inside styled card&lt;/p&gt;
+    &lt;/StyledCard&gt;
+);
+</code></pre>
     </section>
 </section>
 
@@ -222,8 +234,9 @@ export default () => &lt;AppH1 userName="Hello world" /&gt;
         <code data-line-numbers="1-10|3|5|8">import { FC } from "react";
 
 type BtnProps = { onClick: (val: string) => void };
+
 const Btn: FC&lt;BtnProps&gt; = (props) => (
-&lt;button onClick={() => props.onClick("hello!")} /&gt;
+    &lt;button onClick={() => props.onClick("hello!")} /&gt;
 );
 
 export default () => &lt;Btn onClick={(v) => alert(v)} /&gt;;
