Sync layout for the presentation

--- a/presentations/6/index.html
+++ b/presentations/6/index.html
@@ -39,8 +39,7 @@
 
             <section>
                 <h1 class="ukraine">
-                    <div>Free React Course</div>
-                    <div>For Beginners</div>
+                    Free React Course <br /> For Beginners
                 </h1>
             </section>
 
