--- a/presentations/4/index.html
+++ b/presentations/4/index.html
@@ -6,15 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React For Beginners - Detecting changes</title>
-    <meta name="description" content="Free learning course - React: Detecting changes"></meta>
-    <meta name="keywords" content="react free learning course beginners"></meta>
-    <meta name="twitter:card" content="summary"></meta>
-    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short"></meta>
-    <meta name="twitter:creator" content="@drag137"></meta>
-    <meta name="twitter:title" content="React For Beginners - Detecting changes"></meta>
+    <meta name="description" content="Free learning course - React: Detecting changes">
+    </meta>
+    <meta name="keywords" content="react free learning course beginners">
+    </meta>
+    <meta name="twitter:card" content="summary">
+    </meta>
+    <meta name="twitter:title" content="React For Beginners - Detecting changes">
+    </meta>
+    <meta name="twitter:site" content="https://github.com/Drag13/react-learning-course-short">
+    </meta>
+    <meta name="twitter:creator" content="@drag137">
+    </meta>
+    <meta name="twitter:image" content="../shared/imgs/title.png">
+    </meta>
+    <meta property="og:image" content="../shared/imgs/title.png">
+    </meta>
     <meta property="og:title" content="React For Beginners - Detecting changes">
-    <meta name="author" content="drag13"></meta>
-    <meta name="robots" content="index follow"></meta>
+    <meta name="author" content="drag13">
+    </meta>
+    <meta name="robots" content="index follow">
+    </meta>
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/theme/black.css">
     <link rel="stylesheet" href="/node_modules/reveal.js/plugin/highlight/zenburn.css">
@@ -26,7 +38,9 @@
         <div class="slides">
 
             <section>
-                <h1>Free React course for Beginners</h1>
+                <h1 class="ukraine">
+                    Free React Course <br /> For Beginners
+                </h1>
             </section>
 
             <section>
@@ -47,6 +61,7 @@
             <section>
                 <h2>Useful links</h2>
                 <ul>
+                    <li> <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/faq-state.html">State in React</a> </li>
                     <li> <a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/hooks-state.html">Using the State Hook</a> </li>
                     <li> <a target="_blank" rel="noreferrer noopener" href="https://morioh.com/p/caccd1b76c5c">Angular vs React - Change detection</a> </li>
                 </ul>
