Fixed heading and some styling

--- a/presentations/6/body.html
+++ b/presentations/6/body.html
@@ -247,7 +247,7 @@ article[role="main"] {
 
 <section>
     <section>
-        <h4>Examples - styled components</h4>
+        <h2>Examples - styled components</h2>
     </section>
 
     <section>
@@ -281,10 +281,10 @@ const FixSizeHeader = styled(AppHeader)`
 </section>
 
 <section>
-    <h2>What to pick</h2>
+    <h2>What to pick?</h2>
 
     <ul>
-        <li>
+        <li class="fragment fade-up">
             Pure CSS - not sure 🤔
         </li>
 
